<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="275dp"
        android:layout_height="331dp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnEnterPatient"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:text="@string/enter_patient" />

        <Button
            android:id="@+id/btnEnterTest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:text="@string/enter_test" />

        <Button
            android:id="@+id/btnViewTest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:text="@string/view_test" />

        <Button
            android:id="@+id/btnUpdatePatient"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:text="@string/view_update_patient" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:text="@string/logout" />

        <TextView
            android:id="@+id/txtUserIndicator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_weight="1"
            android:gravity="center"
            android:text="TextView" />
    </LinearLayout>

</LinearLayout>