<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EnterPatientActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patient_id" />

    <EditText
        android:id="@+id/txPatientId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/txPtFirstName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/txPtLastName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/department" />

    <EditText
        android:id="@+id/txDepartment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room" />

    <EditText
        android:id="@+id/txRoom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAddPt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_button_height"
        android:text="@string/add_patient" />

</LinearLayout>